# BBB_Wing

./: .gitignore  CMakeLists.txt  README.md  config.json
nodes/sensor_altimeter_node/: CMakeLists.txt
nodes/sensor_altimeter_node/sources/: sensor_altimeter_node.cpp  sensor_altimeter_node.h
sources/common/: CMakeLists.txt  i_node.h
sources/common/config/: config.cpp  config.h
sources/common/nodes/: abstract_node.h  abstract_node_frequency.cpp  abstract_node_frequency.h  scheduler_node.cpp  scheduler_node.h
sources/common/packets/: base_packet.cpp  base_packet.h  board_packet.cpp  board_packet.h
sources/common/tests/: CMakeLists.txt  common_tests.cpp  packets_test.cpp  packets_test.h
sources/common/transceivers/: abstract_transceiver.h
sources/common/transport/: base_transport.cpp  base_transport.h  publisher.cpp  publisher.h  subscriber.h
sources/core/: CMakeLists.txt  core.h  topics.h
sources/core/config/: config.cpp  config.h  config_impl.cpp  config_impl.h
sources/core/nodes/: abstract_node.cpp  abstract_node.h  abstract_node_frequency.cpp  abstract_node_frequency.h  branch_node.cpp  branch_node.h  gateway_node.cpp  gateway_node.h  scheduler_node.cpp  scheduler_node.h  thread_node.cpp  thread_node.h
sources/core/packets/: alt_packet.cpp  alt_packet.h  automatic_control_packet.cpp  automatic_control_packet.h  base_packet.cpp  board_packet.cpp  board_packet.h  connection_status_packet.cpp  connection_status_packet.h  control_packet.cpp  control_packet.h  crc_packet.cpp  crc_packet.h  direct_packet.cpp  direct_packet.h  drive_impacts_packet.cpp  drive_impacts_packet.h  drive_inpacts_packet.cpp  failures_packet.cpp  failures_packet.h  flight_control_packet.cpp  flight_control_packet.h  flight_point_packet.cpp  flight_point_packet.h  flight_program_packet.cpp  flight_program_packet.h  ground_packet.cpp  ground_packet.h  init_request_packet.cpp  init_request_packet.h  init_response_packet.cpp  init_response_packet.h  ins_packet.cpp  ins_packet.h  navigator_packet.cpp  navigator_packet.h  packet.cpp  packet.h  packets.cpp  packets.h  (+10 more)
sources/core/recorders/: CMakeLists.txt  abstract_recorder.cpp  abstract_recorder.h  file_record_player.cpp  file_record_player.h  file_recorder.cpp  file_recorder.h
sources/core/tests/: CMakeLists.txt  core_tests.cpp
sources/core/tests/packets_test/: packets_test.cpp  packets_test.h
sources/core/tests/pub_sub_test/: pub_sub_test.cpp  pub_sub_test.h
sources/core/transceivers/: CMakeLists.txt  abstract_transceiver.cpp
sources/core/transport/: CMakeLists.txt  publisher.h
sources/core/transport/exchangers/: abstract_exchanger.cpp  abstract_exchanger.h  serial_port_exchanger.cpp  serial_port_exchanger.h  udp_exchanger.cpp  udp_exchanger.h
sources/core/transport/links/: abstract_link.cpp  abstract_link.h  serial_port_link.cpp  serial_port_link.h  udp_link.cpp  udp_link.h
sources/core/transport/pub_sub/: pub_sub_base.cpp  pub_sub_base.h  publisher.cpp  publisher.h  subscriber.cpp  subscriber.h
sources/core/transport/transceivers/: abstract_transceiver.h  serial_port_transceiver.cpp  serial_port_transceiver.h  udp_transceiver.cpp  udp_transceiver.h
sources/devices/lsm9ds1/: CMakeLists.txt  lsm9ds1.cpp  lsm9ds1.h  lsm9ds1_devices.h  lsm9ds1_gyro_accel.cpp  lsm9ds1_gyro_accel.h  lsm9ds1_mag.cpp  lsm9ds1_mag.h  lsm9ds1_registers.h
sources/devices/mpl3115a2/: CMakeLists.txt  mpl3115a2.cpp  mpl3115a2.h  mpl3115a2_registers.h
sources/devices/mpl3115a2/tests/: CMakeLists.txt  mpl3115a2_test.cpp
sources/devices/pca9685/: CMakeLists.txt  pca9685.cpp  pca9685.h  pca9685_registers.h
sources/nodes/board_transceiver_node/: CMakeLists.txt  board_transceiver_node.cpp  board_transceiver_node.h  config.json
sources/nodes/board_transceiver_node/board_receiver/: board_receiver.cpp  board_receiver.h
sources/nodes/board_transceiver_node/board_receiver_node/: board_receiver_node.cpp  board_receiver_node.h
sources/nodes/board_transceiver_node/board_transmitter/: board_transmitter.cpp  board_transmitter.h
sources/nodes/board_transceiver_node/board_transmitter_node/: board_transmitter_node.cpp  board_transmitter_node.h
sources/nodes/debug_node/: CMakeLists.txt  debug_node.cpp  debug_node.h
sources/nodes/flight_controller_node/: CMakeLists.txt  config.conf  config.json  flight_controller_node.cpp  flight_controller_node.h
sources/nodes/flight_controller_node/regulators/: abstract_regulator.cpp  abstract_regulator.h  flight_regulator.cpp  flight_regulator.h  pid_regulator.cpp  pid_regulator.h  regulator_factory.h
sources/nodes/flight_navigator_node/: CMakeLists.txt  config.conf  config.json  flight_navigator_node.cpp  flight_navigator_node.h
sources/nodes/flight_navigator_node/navigation_states/: abstract_navigation_state.cpp  abstract_navigation_state.h  idle_navigation_state.cpp  idle_navigation_state.h  takeoff_navigation_state.cpp  (+1 more)
sources/nodes/flight_recorder_node/: CMakeLists.txt  config.conf  config.json  flight_recorder_node.cpp  flight_recorder_node.h
sources/nodes/sensor_altimeter_node/: CMakeLists.txt  config.conf  config.json  sensor_altimeter_node.cpp  sensor_altimeter_node.h
sources/nodes/sensor_imu_node/: CMakeLists.txt  sensor_imu_node.cpp  sensor_imu_node.h
sources/nodes/sensor_ins_node/: CMakeLists.txt  config.conf  config.json  sensor_ins_node.cpp  sensor_ins_node.h
sources/nodes/sensor_sns_node/: CMakeLists.txt  config.conf  config.json  sensor_sns_node.cpp  sensor_sns_node.h
sources/nodes/servo_control_node/: CMakeLists.txt  config.conf  servo_control_node.cpp  servo_control_node.h
sources/nodes/ui_node/: CMakeLists.txt  qml.qrc  resources.qrc  ui_node.cpp  ui_node.h
sources/targets/board/: CMakeLists.txt  main.cpp
sources/targets/ground/: CMakeLists.txt  main.cpp
sources/targets/workstation/: CMakeLists.txt  main.cpp  qml.qrc  resources.qrc
sources/transport/: CMakeLists.txt  base_transport.cpp  base_transport.h  publisher.cpp  publisher.h  subscriber.cpp  subscriber.h
sources/transport/tests/: CMakeLists.txt  pubsub_test.cpp  pubsub_test.h  transport_tests.cpp
(+175 files in other folders)
